--- a/userprofiles/templates/base.html
+++ b/userprofiles/templates/base.html
@@ -24,10 +24,10 @@
         <div id="navbar" class="navbar-collapse collapse">
           <form class="navbar-form navbar-right">
             <div class="form-group">
-              <input type="text" placeholder="Email" class="form-control">
+              <input name="username" type="text" placeholder="Username" class="form-control">
             </div>
             <div class="form-group">
-              <input type="password" placeholder="Password" class="form-control">
+              <input name="password" type="password" placeholder="Password" class="form-control">
             </div>
             <button type="submit" class="btn btn-success">Sign in</button>
           </form>
@@ -35,10 +35,13 @@
       </div>
     </nav>
         {% block content%} {% endblock content %}
-
-        
-        <script src="{% static "js/jquery.js" %}"></script>
-        <script src="{% static "js/bootstrap.min.js" %}"></script>
-        {% block js %}{% endblock js %}
+    <div class="container">
+      <footer>
+        <p>@Author Carlos Campo Liébana. Copyleft.</p>
+      </footer>
+    </div>
+    <script src="{% static "js/jquery.js" %}"></script>
+    <script src="{% static "js/bootstrap.min.js" %}"></script>
+    {% block js %}{% endblock js %}
 	</body>
 </html>
